# ShowME

./: .env.example  .gitignore  ARCHITECTURE.md  DEVPOST_ABOUT.md  LICENSE  PRIVACY-SECURITY.md  QA.md  README.md  RESEARCH.md  ShowME_Design_Prompt2.md  ShowME_Design_Prompt3.md  ShowME_Design_Prompt4.md  ShowME_Design_Prompt5.md  biome.json  electron-builder.yml  electron.vite.config.ts  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts  vite.web.config.ts  vitest.config.ts
docs/: ARCHITECTURE.md  PRIVACY-SECURITY.md  QA.md  RESEARCH.md
public/: sandbox.html  sandbox.js
scripts/: build-devpost-thumbnail.mjs  build-icons.mjs  build-python-worker.py  build-submission-scenes.mjs  build-submission-thumbnail.mjs  capture-desktop-take.py  check-bundle-budget.mjs  generate-wake-test-pcm.ps1  test-wake.mjs
src/: App.tsx  main.tsx  redesign.css  styles.css  vite-env.d.ts  workbench.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  capture.rs  commands.rs  credentials.rs  db.rs  error.rs  images.rs  lib.rs  main.rs  models.rs  safety.rs  windows.rs
src-tauri/src/providers/: compatible.rs  mod.rs  openai.rs
tests/: audio-routing.test.ts  audio.test.ts  coordinates.test.ts  credential-display.test.ts  errors.test.ts  grounding.test.ts  launcher.test.ts  learning-check.test.ts  learning-flow.test.ts  lesson-canvas.test.ts  lesson-lifecycle.test.ts  lesson.test.ts  media.test.ts  providers.test.ts  schema.test.ts  selection.test.ts  simulations.test.ts  speech-playback.test.ts  store.test.ts  tray-menu.test.ts  voice-command.test.ts  voice.test.ts  wake-word.test.ts  whiteboard-canvas.test.ts  (+1 more)
workers/native/: Cargo.toml
workers/native/src/: main.rs
(+85 files in other folders)
