[package]
name = "showme"
version = "0.2.0"
description = "A desktop visual lesson compiler"
authors = ["ShowME contributors"]
edition = "2024"
rust-version = "1.88"

[lib]
name = "showme_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
image = { version = "0.25.9", default-features = false, features = ["png"] }
keyring = "4.1.5"
log = "0.4.29"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "multipart", "rustls-tls", "http2"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tauri = { version = "2.11.5", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-log = "2.9.0"
tauri-plugin-opener = "2.5.4"
tauri-plugin-single-instance = "2.4.3"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["sync", "time"] }
url = "2.5.7"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
xcap = { version = "0.9.6", features = ["wgc"] }

[dev-dependencies]
tempfile = "3.24.0"
