[package]
name = "showme-native"
version = "1.0.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Security_Cryptography",
  "Win32_System_Memory",
] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
